--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ a:hover{
     color: aquamarine;
 }
 #head-nav{
-    
     color: white;
     margin: 0px 5px;
     font-family: cursive;
@@ -41,6 +40,7 @@ a:hover{
 b{
     font-family: fantasy;
     font-weight: 3%;
+    
 }
 #btn{
     display: flex;
@@ -87,8 +87,7 @@ header{
  align-items: start;
 }
 
-#img{
-    
+#img{   
     display: flex;
     padding:0%;
     /* margin:0px 100px; */
@@ -115,23 +114,22 @@ color: white;
 }
 
 #info2{
-    margin: 100px;
+    
     /* border: 2px solid black; */
     padding: auto;
     display: flex;
     justify-content: center;
+    margin: 0px 400px;
 
 }
 
 #info2-1{
     /* border: 2px solid black; */
     text-align: center;
-
     flex-direction: row;
     /* border: 2px solid black; */
-    padding:50px 10px ;
-
-   }
+    padding:50px 20px ;
+}
 
 
    #img2{
@@ -140,6 +138,87 @@ color: white;
     margin: 10px;
 }
 
+#img3{   
+    display: flex;
+    padding:0%;
+    /* margin:0px 100px; */
+    margin-right: 400px;
+    
+}
+
 #img2:hover{
     transform:10px;
+}
+
+#img2:hover{
+    transform: scale(105%);
+}
+
+#info3{
+    padding: 100px;
+    /* border: 2px solid black; */
+
+}
+#b1{
+font-size: xx-large;
+}
+#exp1{
+    text-align: center;
+}
+#exp3{
+    align-self: center;
+    /* border: 2px solid black; */
+    margin-left: 410px;
+    padding: 50px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+
+#exp2{
+    padding: 50px;
+}
+
+#exp-img{
+    display:flexbox;
+    margin-left: 400px;
+}
+
+#vid{
+/* border: 2px solid black; */
+margin: 100px;
+text-align:center;
+padding-right: 80px;
+}
+
+iframe{
+    padding: 0%;
+    width:800px;
+    height: 500px;
+}
+
+footer{
+    display:flex;
+    /* padding: 30px; */
+    /* margin: 50px; */
+    text-align: center;
+    /* margin-left: 100px; */
+    background-color: rgb(0, 76, 76);
+}
+
+footer p:hover{
+    color: white;
+}
+
+#footdet{
+    padding: 80px;
+
+}
+#p{
+    /* border: 2px solid black; */
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding-right: 30px;
+    text-align: left;
+    font-size:large;
+    font-weight: 100%;
 }
